# blog_with_notion

./: .env.example  .gitignore  .last_sync  README.md  pyproject.toml
.github/workflows/: deploy.yml
hugo/: hugo.yaml  hugo_stats.json  vercel.json
hugo/assets/scss/: custom.scss
hugo/content/: about.md  archives.md  search.md
hugo/data/: external.yaml
hugo/layouts/partials/article-list/: detailed.html
hugo/layouts/partials/head/: custom.html
notion_sync/: __init__.py  config.py  hugo_generator.py  image_config.py  main.py  notion_client.py
